# youtube-transcriber

./: LICENSE  README.md  gpu_test.py  main.py  pyproject.toml  transcript.txt
